--- a/src/components/ids-month-view/ids-month-view.scss
+++ b/src/components/ids-month-view/ids-month-view.scss
@@ -464,6 +464,18 @@
       text-align: center;
     }
 
+    // Feature Request 911
+    .custom-calendar-day-text {
+      @include absolute();
+      @include cursor-pointer();
+      @include z-1();
+
+      left: calc(100% - 25px);
+      top: 2px;
+      width: 10px;
+      text-align: center;
+    }
+
     &.month-label .day-text {
       left: auto;
       width: 100%;
