--- a/src/components/ids-month-view/ids-month-view.scss
+++ b/src/components/ids-month-view/ids-month-view.scss
@@ -459,7 +459,7 @@
       @include z-1();
 
       left: calc(100% - 25px);
-      top: var(--ids-calendar-day-text);
+      top: var(--ids-month-view-day-text-top, 13px);
       width: 10px;
       text-align: center;
     }
